--- a/src/BetRoulette.Application/BetRoulette.Application.csproj
+++ b/src/BetRoulette.Application/BetRoulette.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\BetRoulette.Domain\BetRoulette.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
