--- a/src/BetRoulette.Api/appsettings.Development.json
+++ b/src/BetRoulette.Api/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "Redis": "redis://default:redispw@localhost:49157"
+  },
+    
+  "Redis": {
+    "InstanceName": "Roulettes"
   }
-}
+ }
