--- a/src/BetRoulette.Application/BetRoulette.Application.csproj
+++ b/src/BetRoulette.Application/BetRoulette.Application.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
