--- a/src/BetRoulette.Infrastructure/BetRoulette.Infrastructure.csproj
+++ b/src/BetRoulette.Infrastructure/BetRoulette.Infrastructure.csproj
@@ -7,8 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BetRoulette.Application\BetRoulette.Application.csproj" />
     <ProjectReference Include="..\BetRoulette.Domain\BetRoulette.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Common\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
