Registro y listado de Roulettes en Base de datos Redis, Filtro de excepciones, Modellos de Requests y Responses, Servicio Roulette

--- a/src/BetRoulette.Api/appsettings.Development.json
+++ b/src/BetRoulette.Api/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "Redis": "redis://default:redispw@localhost:49157"
+    //"Redis": "redis://default:redispw@localhost:49157"
   },
     
   "Redis": {
