--- a/src/BetRoulette.Infrastructure/BetRoulette.Infrastructure.csproj
+++ b/src/BetRoulette.Infrastructure/BetRoulette.Infrastructure.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.90" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,8 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Common\" />
-    <Folder Include="Services\" />
+    <Folder Include="Data\Config\" />
   </ItemGroup>
 
 </Project>
