Creación de pruebas unitarias, para controladores y servicios (básicos)

--- a/src/BetRoulette.Api/Properties/launchSettings.json
+++ b/src/BetRoulette.Api/Properties/launchSettings.json
@@ -1,13 +1,21 @@
 {
+  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:57530",
+      "sslPort": 44370
+    }
+  },
   "profiles": {
     "BetRoulette.Api": {
       "commandName": "Project",
       "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7298;http://localhost:5281",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7298;http://localhost:5281"
+      }
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -20,17 +28,7 @@
     "Docker": {
       "commandName": "Docker",
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "publishAllPorts": true,
-      "useSSL": true
-    }
-  },
-  "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:57530",
-      "sslPort": 44370
+      "environmentVariables": {}
     }
   }
 }
